# libpqxx-bazel

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  main.cc
